# validate-it

./: .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .pylintrc  .scrutinizer.yml  .travis.yml  Dockerfile  LICENSE.txt  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  pypy.dockerfile  python3.6.dockerfile  python3.7.dockerfile  requirements.txt  run_benchmarks.sh  run_tests.sh  setup.py  tox.ini
benchmarks/: _dict.py  _list.py  config.py  nested_union.py  simple.py  union.py
tests/: test_clone.py  test_complex.py  test_config.py  test_dataclass.py  test_debug_info.py  test_inheritance.py  test_mapping.py  test_meta.py  test_options.py  test_pack.py  test_post_init.py  test_representation.py  test_types.py  test_validators.py
validate_it/: __init__.py  any.py  base.py  decorators.py  options.py  options.pyi  schema.py  strict.py  union.py  utils.py  variable.py
