[tool.poetry]
name = "validate-it"
version = "0.10.1"
description = "Ultimate data validation tool built on top of the typing module"
authors = ["Ruslan Roskoshny <i.am.yarger@gmail.com>"]
license = "MIT (See LICENSE.txt)"
readme = "README.md"
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation :: PyPy',
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
python-box = "^5.1.1"
accordion = "^0.2.3"
isort = "^5.6.4"

[build-system]
requires = [
    "poetry>=0.12"
]
build-backend = "poetry.masonry.api"
